tests/paczka1/fuzzy1/21240891.err
Error in line 2: lQVUo S409 6,1
Error in line 3: lQVUo A240 33,5
Error in line 5: U1qCK2fe7VQ A240 68,1
Error in line 4: Tq8leBGp S333 38,6
Error in line 12: hnxSkiwN S333 58,3
Error in line 26: hnxSkiwN Si09 50,6
Error in line 36: veoWt4E A240 63,4
